# razer-tray

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md  RESEARCH.md  build.bat  build_v2.bat
.github/: FUNDING.yml
archive/v1.0/: CMakeLists.txt  CONFIGURATION.md  DISTRIBUTION.md  OPENRAZER_CONFIG_EXAMPLE.md  README.md  config.example.json  razer-config.ps1
src/: BatteryIcon.cpp  BatteryIcon.h  ConfigManager.cpp  ConfigManager.h  DeviceMonitor.cpp  DeviceMonitor.h  SafeHandles.h  TrayApp.cpp  TrayApp.h  main.cpp  version.h
src_v2_usb/: main.cpp
src_v2_usb/core/: razer_protocol.h
src_v2_usb/devices/: device_manager.cpp  device_manager.h  razer_device.cpp  razer_device.h
src_v2_usb/ui/: cli_menu.cpp  cli_menu.h  tray_app.cpp  tray_app.h
